Deleted update method for locations
